# tapp

./: CMakeLists.txt  README.md  main.cpp  tapp_base.h  tapp_basics.h  tapp_io.h  tapp_lisp.h  tapp_lisp_base.h  tapp_lisp_base_serial.h  tapp_lisp_global_env.h  tapp_lisp_run.h  tapp_lisp_type_reduction.h  tapp_list_map.h  tapp_run.h  tapp_type_reduction.h  tapp_utility.h
